--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0">
-		<title>Listee Vuejs Documentation</title>
+		<title>Iravit Documentation</title>
 		
 		<!-- Favicon -->
 		<link rel="shortcut icon" type="image/x-icon" href="assets/img/favicon.png">
@@ -27,13 +27,11 @@
 					<div class="container-fluid">
 						<div class="navbar-left">
 							<a class="navbar-brand" href="index.html">
-								<img class="logo-dark" src="assets/img/dreamguys-logo.png" alt="logo">
+								<img class="logo-dark" src="assets/img/logo.png" alt="logo">
 							</a>
 						</div>
 						<div class="action-list">
-							<a class="btn btn-primary btn-live" target="_blank" href="https://themeforest.net/item/listee-directory-and-listing-template/43191353">Buy Now</a>
-							<a class="btn btn-primary btn-live" target="_blank" href="https://listee.dreamguystech.com/reactjs/index">Live Demo <i class="fas fa-arrow-right ps-2"></i></a>
-							<a class="support-btn" target="_blank" href="https://themeforest.net/user/dreamguys"><img class="img-fluid" src="assets/img/headset_mic.png" alt="icon"> Support</a>
+							<a class="support-btn" target="_blank" href="https://themeforest.net/user/stackbuzz"><img class="img-fluid" src="assets/img/headset_mic.png" alt="icon"> Support</a>
 						</div>
 					</div>
 				</nav>
@@ -96,27 +94,28 @@
 				<div class="content container-fluid">
 					<div class="logo">
 						<a class="main-logo" href="index.html">
-							<img class="img-fluid" src="assets/img/logo.svg" alt="logo">
+							<img class="img-fluid" src="assets/img/brand.png" alt="logo">
 						</a>
 					</div>
 					<div class="page-header">
 						<h4>Documentation</h4>
 						<ul>
 							<li>Created on: 07 June 2023</li>
-							<li>Developed by: <a target="_blank" href="https://dreamguys.co.in/">DreamGuy's Technologies</a>
+							<li>Developed by: <a target="_blank" href="https://themeforest.net/user/stackbuzz">Stack Buzz</a>
 							</li>
-							<li>Support via email: <a href="mailto:business@dreamguystech.com">business@dreamguystech.com</a>
+							<li>Support via email: <a href="mailto:stackbuzzlive@gmail.com">stackbuzzlive@gmail.com</a>
 							</li>
-							<li>Support via Themeforest: <a target="_blank" href="https://themeforest.net/user/dreamguys/">Take me there</a></li>
+							<li>Support via Themeforest: <a target="_blank" href="https://themeforest.net/user/stackbuzz">Take me there</a></li>
 						</ul>
 					</div>
 					<hr>
 					<section id="features">
 						<h1>1. OVERVIEW</h1>
-						<p>Listee Template offers you the best template created by the latest version of reactjs 18.2.0. They are exclusively designed to help out online product listing websites with professionally designed templates. It offers a list of category-specific pages and multiple variations pages for all types of learning management platforms.</p>
+						<p>Iravit Template is a Sass template built on the latest version of Next.js 14.4.0, specifically designed for digital agencies. It provides professionally crafted templates to support the online presence and digital services of such agencies</p>
+						<!-- <p>Iravit Template offers you the best template created by the latest version of nextjs 18.2.0. They are exclusively designed to help out digital agency based websites with professionally designed templates.</p> -->
 						<h4>1. 1. Features</h4>
 						<ul class="feature-list">
-							<li><span>Creative Design:</span> Listee is a bold theme that organizing content to follow natural eyes, striking balance between beautiful and visual hierarchy.</li>
+							<li><span>Creative Design:</span> Iravit is a bold theme that organizing content to follow natural eyes, striking balance between beautiful and visual hierarchy.</li>
 
 							<li><span>Fully Responsive:</span> The theme passed Mobile-Friendly Test – by Google. We also tested carefully the theme on almost devices: laptop, tablet, and phone. All elements are 100% responsive and ready for all devices.</li>
 
@@ -272,7 +271,7 @@
 				<div class="container-fluid">
 					<div class="row align-items-center">
 						<div class="col-sm-12">
-							<p class="mb-0">© 2023 Listee. All rights reserved.</p>
+							<p class="mb-0">© 2023 Iravit. All rights reserved.</p>
 						</div>
 						<a href="#" class="top-move"><i class="fas fa-arrow-up"></i></a>
 					</div>
