fixed company identity

--- a/index.html
+++ b/index.html
@@ -255,13 +255,13 @@
                     </section>
 					<section id="support" class="mb-30">
 						<h1>5. SUPPORT</h1>
-						<p class="mb-0">If you have any queries please contact us through email: <strong>business@dreamguystech.com</strong>
+						<p class="mb-0">If you have any queries please contact us through email: <strong>stackbuzzlive@gamil.com</strong>
 						</p>
 					</section>
 					<section id="thanks" class="mb-0">
 						<h1>6. THANK YOU</h1>
 						<p>Thank you so much for using this template</p>
-						<a target="_blank" href="https://themeforest.net/user/dreamguys"><strong>Dreamguy's Technologies Pvt Ltd,</strong></a>
+						<a target="_blank" href="https://themeforest.net/user/stackbuzz"><strong>Stack Buzz</strong></a>
 					</section>
 				</div>
 			</div>
