--- a/index.html
+++ b/index.html
@@ -118,6 +118,7 @@
 							<li><span>Creative Design:</span> Iravit is a bold theme that organizing content to follow natural eyes, striking balance between beautiful and visual hierarchy.</li>
 
 							<li><span>Fully Responsive:</span> The theme passed Mobile-Friendly Test – by Google. We also tested carefully the theme on almost devices: laptop, tablet, and phone. All elements are 100% responsive and ready for all devices.</li>
+							<li><span>Utility-First Framework:</span> Tailwind CSS adopts a utility-first approach, utilizing small, single-purpose utility classes directly in HTML for efficient and flexible styling.</li>
 
 							<li><span>Pixel Perfect Design</span></li>
 
@@ -177,9 +178,9 @@
 					<section id="requirements">
 						<h4>1. 3. Requirements</h4>
 						<ul>
-							<li>React - 18.2.0</li>
-							<li>Node - 20.2.0</li>
-							<li>Webpack - 5.85.0</li>
+							<li>Next JS - 14.0.4</li>
+							<li>Node - >=18</li>
+							<li>Tailwindcss</li>
 							<li>Node js Package</li>
 							<li>Yarn package(optional)</li>
 							<li>Visual Studio Code</li>
@@ -192,33 +193,35 @@
 						<p> Extract the zip file you received after purchase and you would find the exact below files and folders: </p>
 						<div class="file-wrap">
 						
-<pre><i class="fas fa-folder"></i><span>Listee/ </span>
+<pre><i class="fas fa-folder"></i><span>Iravit/ </span>
 │
-└── <i class="fas fa-folder"></i><span>raectjs/ </span>
+└── <i class="fas fa-folder"></i><span>app/ </span>
 |	│
 |	└── <i class="fas fa-folder"></i><span>public/ </span>
 |	│
 |	└──<i class="fas fa-folder"></i><span> src/ </span>           
 |
-|		<i class="fas fa-file text-blue"></i><span>.gitgnore</span>
+|	   <i class="fas fa-file text-blue"></i><span>.eslintrc.json</span>
 |			
-|		<i class="fas fa-file text-blue"></i><span>babel.config.js</span>
+|	   <i class="fas fa-file text-blue"></i><span>.gitgnore</span>
+|
+|	   <i class="fas fa-file text-blue"></i><span>jsconfig.json</span> 
 |			
-|		<i class="fas fa-file text-blue"></i><span>jsconfig.json</span> 
+|	   <i class="fas fa-file text-blue"></i><span>next.config.js</span>
 |			
-|		<i class="fas fa-file text-blue"></i><span>package-lock.json</span>
+|	   <i class="fas fa-file text-blue"></i><span>package-lock.json</span>
 |
-|		<i class="fas fa-file text-blue"></i><span>package.json</span>
+|	   <i class="fas fa-file text-blue"></i><span>package.json</span>
 |
-|		<i class="fas fa-file text-blue"></i><span>README.md</span>
+|	   <i class="fas fa-file text-blue"></i><span>postcss.config.js</span>
 |
-|		<i class="fas fa-file text-blue"></i><span>react.config.js</span>
+|	   <i class="fas fa-file text-blue"></i><span>README.md</span>
 |
-|		<i class="fas fa-file text-blue"></i><span>webpack.config.js</span>
+|	   <i class="fas fa-file text-blue"></i><span>tailwind.config.js</span>
 |
 └──<i class="fas fa-folder"></i><span>documentation/</span>
 
-	<i class="fas fa-file text-blue"></i><span>reactjs</span>
+	<i class="fas fa-file text-blue"></i><span>index.html</span>
 
 </pre>
 						</div>
@@ -228,26 +231,23 @@
 						<h1>3. CREDITS</h1>
 						<p>We've used the following resources as listed. These are some awesome creation and we are thankful to the community.</p>
 						<ul class="credit-list">
-							<li><a target="_blank" href="https://react-bootstrap.github.io/">React-Bootstrap</a></li>
-							<li><a target="_blank" href="http://getbootstrap.com/">Bootstrap</a></li>
-							<li><a target="_blank" href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a></li>
+							<li><a target="_blank" href="https://nextjs.org/">Next Js</a></li>
+							<li><a target="_blank" href="https://tailwindcss.com/">Tailwind css</a></li>
+							<li><a target="_blank" href="http://www.google.com/fonts">Google Fonts</a></li>	
+							<li><a target="_blank" href="https://react-icons.github.io/react-icons/">React-icons</a></li>
 							<li><a target="_blank" href="https://www.npmjs.com/package/react-owl-carousel">React-carousel</a></li>
 							<li><a target="_blank" href="https://react-select.com/home">React-select</a></li>
 							<li><a target="_blank" href="https://morioh.com/p/2fc11e2ee6b7">Fancybox</a></li>	
-							<li><a target="_blank" href="http://www.google.com/fonts">Google Fonts</a></li>	
-							<li><a target="_blank" href="https://ant.design/components/table/">Antd Table</a></li>
-							<li><a target="_blank" href="https://select2.org/">Select2</a></li>
-							<li><a target="_blank" href="https://summernote.org/">Summernote</a></li>				
+							<li><a target="_blank" href="https://ant.design/components/table/">Antd Table</a></li>			
 						</ul>
 					</section>
 					<section id="keyfeatures" class="mb-30">
                         <h1>4. Key Features</h1>
                         <ul class="credit-list">
-                            <li><a>Build with React 18.2.0</a></li>
-                            <li><a>Build with Bootstrap v5.2.3</a></li>
+                            <li><a>Build with Next Js 14.0.2</a></li>
+                            <li><a>Build with Tailwindcss v5.2.3</a></li>
                             <li><a>Build with webpack v5.85.0</a></li>
                             <li><a>Create React App Supported</a></li>
-                            <li><a>Hooks based architecture</a></li>
                             <li><a>Pur Components Based ReactJs, no jQuery</a></li>
                             <li><a>Fully Responsive Design</a></li>
                             <li><a>SASS Supported</a></li>
